# k8s-pv-assembler

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  index.yaml  kind-config.yaml
.github/workflows/: main.yaml  release-charts.yaml  release-docker.yaml
charts/pv-assembler/: Chart.yaml  values.yaml
charts/pv-assembler/crds/: crd.yaml
charts/pv-assembler/templates/: config.yaml  deployment.yaml
deploy/: debug-values.yaml  debug.yaml  pv.yaml  pvc.yaml
src/: main.rs  metrics.rs  opts.rs
src/controller/: crd.rs  db.rs  finalizer.rs  mod.rs  pvc_part.rs
